--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -g")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -O3")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_PREFIX_PATH $ENV{CMAKE_PREFIX_PATH})
+string(REPLACE ":" ";" CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH}")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
@@ -20,8 +21,7 @@ foreach(PATH IN LISTS CMAKE_PREFIX_PATH)
     include_directories("${PATH}/include")
 endforeach()
 
-find_package(fmt REQUIRED)
-add_definitions(-DFMT_HEADER_ONLY=On)
+add_definitions(-DFMT_HEADER_ONLY)
 
 include(FetchContent)
 
