--- a/src/Tests/CMakeLists.txt
+++ b/src/Tests/CMakeLists.txt
@@ -13,7 +13,7 @@ if (DEFINED QUTILS_BUILDING_TEST)
         POSITION_INDEPENDENT_CODE ON
     )
 
-    target_link_libraries(qutils_test PRIVATE ${qutils_test_libs})
+    target_link_libraries(qutils_test PUBLIC ${qutils_test_libs})
     #target_include_directories(qutils_test PRIVATE ${SAMPLERS_DIR} ${QUANTUMSTATE_DIR} ${CLIFFORDSTATE_DIR} ${MONTECARLO_DIR} ${MISC_DIR} ${GLAD_PATH}/include)
 
     add_executable(qutils_benchmark
@@ -25,6 +25,6 @@ if (DEFINED QUTILS_BUILDING_TEST)
         POSITION_INDEPENDENT_CODE ON
     )
 
-    target_link_libraries(qutils_benchmark PRIVATE ${qutils_test_libs})
+    target_link_libraries(qutils_benchmark PUBLIC ${qutils_test_libs})
     #target_include_directories(qutils_benchmark PRIVATE ${SAMPLERS_DIR} ${QUANTUMSTATE_DIR} ${CLIFFORDSTATE_DIR} ${MONTECARLO_DIR} ${MISC_DIR} ${GLAD_PATH}/include)
 endif()
