Added free fermion tests, refactored free fermion code, refactored entanglement code

--- a/src/SimulatorDisplay/CMakeLists.txt
+++ b/src/SimulatorDisplay/CMakeLists.txt
@@ -18,4 +18,5 @@ else()
 endif()
 
 add_library(simulator_display ${SOURCE_FILES})
+target_compile_definitions(simulator_display  PRIVATE SIMULATOR_DISPLAY_PATH="${CMAKE_SOURCE_DIR}/src/SimulatorDisplay")
 target_link_libraries(simulator_display PRIVATE glfw)
