--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,13 +2,13 @@
 requires = [
 	"scikit-build-core>=0.4.3", 
 	"nanobind>=1.8.0",
-	"cmake>=3.27"
+	"cmake>=3.26"
 ]
 build-backend = "scikit_build_core.build"
 
 [project]
 name = "qutils"
-version = "0.0.1"
+version = "1.0.0"
 description = "Tools for managing my quantum simulations."
 requires-python = ">=3.10"
 authors = [
@@ -21,7 +21,7 @@ build-dir = "build/{wheel_tag}"
 wheel.py-api = "cp312"
 
 [tool.scikit-build.cmake.define]
-BUILDING_PYQUTILS = "ON"
+BUILDING_PYQUTILS = "On"
 
 [tool.cibuildwheel]
 build-verbosity = 1
