--- a/src/Tests/CMakeLists.txt
+++ b/src/Tests/CMakeLists.txt
@@ -4,27 +4,36 @@ if (DEFINED QUTILS_BUILDING_TEST)
         list(APPEND qutils_test_libs simulator_display)
     endif()
 
-    add_executable(qutils_test
-        test.cpp
+    add_executable(test_quantum_state
+        test_quantum_state.cpp
     )
 
-    set_target_properties(qutils_test PROPERTIES 
+    set_target_properties(test_quantum_state PROPERTIES 
         LINKER_LANGUAGE CXX 
         POSITION_INDEPENDENT_CODE ON
     )
 
-    target_link_libraries(qutils_test PUBLIC ${qutils_test_libs})
-    #target_include_directories(qutils_test PRIVATE ${SAMPLERS_DIR} ${QUANTUMSTATE_DIR} ${CLIFFORDSTATE_DIR} ${MONTECARLO_DIR} ${MISC_DIR} ${GLAD_PATH}/include)
+    target_link_libraries(test_quantum_state PUBLIC ${qutils_test_libs})
+
+    add_executable(test_graph
+        test_graph.cpp
+    )
+
+    set_target_properties(test_graph PROPERTIES 
+        LINKER_LANGUAGE CXX 
+        POSITION_INDEPENDENT_CODE ON
+    )
+
+    target_link_libraries(test_graph PUBLIC ${qutils_test_libs})
 
     add_executable(qutils_benchmark
         benchmark.cpp
     )
 
-    set_target_properties(qutils_test PROPERTIES 
+    set_target_properties(qutils_benchmark PROPERTIES 
         LINKER_LANGUAGE CXX 
         POSITION_INDEPENDENT_CODE ON
     )
 
     target_link_libraries(qutils_benchmark PUBLIC ${qutils_test_libs})
-    #target_include_directories(qutils_benchmark PRIVATE ${SAMPLERS_DIR} ${QUANTUMSTATE_DIR} ${CLIFFORDSTATE_DIR} ${MONTECARLO_DIR} ${MISC_DIR} ${GLAD_PATH}/include)
 endif()
