--- a/src/LinearCode/CMakeLists.txt
+++ b/src/LinearCode/CMakeLists.txt
@@ -2,7 +2,4 @@ add_library(linear_code
     LinearCode.cpp
 )
 
-set_target_properties(linear_code PROPERTIES 
-    LINKER_LANGUAGE CXX 
-    POSITION_INDEPENDENT_CODE ON
-)
+target_include_directories(linear_code PUBLIC ${qutils_SOURCE_DIR}/src)
