--- a/src/LinearCode/CMakeLists.txt
+++ b/src/LinearCode/CMakeLists.txt
@@ -3,3 +3,4 @@ add_library(linear_code
 )
 
 target_include_directories(linear_code PUBLIC ${qutils_SOURCE_DIR}/src)
+target_link_libraries(linear_code PUBLIC fmt::fmt dataframe::dataframe qutils::qutils)
