--- a/src/MonteCarlo/CMakeLists.txt
+++ b/src/MonteCarlo/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(montecarlo MonteCarlo.cpp)
-message("FROM MONTECARLO ========================================================================================================== ${qutils_SOURCE_DIR}")
 target_include_directories(montecarlo PUBLIC ${qutils_SOURCE_DIR}/src)
+target_link_libraries(montecarlo PUBLIC fmt::fmt dataframe::dataframe)
